--- a/frontend/packages/nextjs/styles/globals.css
+++ b/frontend/packages/nextjs/styles/globals.css
@@ -2,6 +2,12 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+body {
+  background-image: url("/bubbles2.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
 :root,
 [data-theme] {
   background: #ead35e;
